<resources>
    <string name="app_name">Exerite_1.1</string>
    <string name="title_home" />
    <string name="title_dashboard" />
    <string name="title_notifications" />
    <string name="title_exercises" />
    <string name="diet" />
    <string name="title_profile" />
    <string name="journal" />
    <string name="toolbar_title">Add New Custom Workout</string>

    <string name="search_hint">Search item</string>
    <string name="editText">Type Something</string>
    <string name="todo">TODO</string>
    <string name="tagline">Ready to Exerite your way in life?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="workouts">Workouts</string>
    <string name="exersise">Exersise</string>
    <string name="reps">reps</string>
    <string name="cardio">Cardio</string>
    <string name="time">Time</string>
    <string name="searching_for_exersises">searching for ExErsises??</string>
    <string name="pick_a_diet">PICK A DIET</string>
    <string name="calories">calories</string>
    <string name="dish_name">Dish Name</string>
    <string name="try_exerite">Try EXErite</string>
    <string name="hey">Hey, !</string>
    <string name="diet_streak_3_10">Diet Streak 3/10</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="exercise_streak_8_10">Exercise Streak 8/10</string>
    <string name="new_name">New Name</string>
    <string name="save_changes">Save Changes</string>
    <string name="recents">Recents</string>
    <string name="journal12">Journal</string>
    <string name="search">Search</string>
    <string name="vegdiet">VEG DIET</string>
    <string name="nonvegdiet">NON VEG DIET</string>
    <string name="drinks">DRINK</string>



</resources>